# simh-tap-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: App.cpp  As400FileListDialog.cpp  MainFrame.cpp  MainFrame.h  TapeProgressDialog.cpp
src/as400/: FileList.cpp  FileList.h
src/tap/: Error.h  Reader.cpp  Reader.h  Result.h  Scanner.cpp  Scanner.h  SimhFormat.cpp  SimhFormat.h  TapeElement.cpp  TapeElement.h  TapeImage.cpp  TapeImage.h  Writer.cpp  Writer.h
tests/tap/: TapTests.cpp
